compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__record_updates4.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 299
expression: "\npub type Car { Car(make: String, model: String, driver: Person) }\npub type Person { Person(name: String, age: Int) }\n\npub fn main() {\n    let car = Car(make: \"Amphicar\", model: \"Model 770\", driver: Person(name: \"John Doe\", age: 27))\n    let new_p = Person(..car.driver, age: 28)\n    new_p\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Car { Car(make: String, model: String, driver: Person) }
pub type Person { Person(name: String, age: Int) }

pub fn main() {
    let car = Car(make: "Amphicar", model: "Model 770", driver: Person(name: "John Doe", age: 27))
    let new_p = Person(..car.driver, age: 28)
    new_p
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([car/0, person/0]).

-type car() :: {car, binary(), binary(), person()}.

-type person() :: {person, binary(), integer()}.

-file("project/test/my/mod.gleam", 5).
-spec main() -> person().
main() ->
    Car = {car,
        <<"Amphicar"/utf8>>,
        <<"Model 770"/utf8>>,
        {person, <<"John Doe"/utf8>>, 27}},
    New_p = begin
        _record = erlang:element(4, Car),
        {person, erlang:element(2, _record), 28}
    end,
    New_p.
