compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__reserve_words.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 19
expression: "record_definition(\"div\",\n&[(\"receive\", type_::int()), (\"catch\", type_::tuple(vec![])),\n(\"unreserved\", type_::tuple(vec![]))])"
snapshot_kind: text
---
-record('div', {'receive' :: integer(), 'catch' :: {}, unreserved :: {}}).
