compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__type_vars.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 32
expression: "record_definition(\"PetCat\",\n&[(\"name\", type_::generic_var(1)), (\"is_cute\", type_::unbound_var(1)),\n(\"linked\", type_::link(type_::int()))])"
snapshot_kind: text
---
-record(pet_cat, {name :: any(), is_cute :: any(), linked :: integer()}).
